[package]
name = "passgenerator"
version = "0.1.1"
edition = "2021"
authors = ["Ersan Demircan"]
description = "A simple password generator"
readme = "README.md"
documentation = "https://github.com/RoaringCow/passgen"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4.4.10", features = ["derive"] }
